feat: add holding methods
