# router/routes.go
@@ -15,14 +15,19 @@ func initializeRoutes(router *gin.Engine) {
 	docs.SwaggerInfo.BasePath = basePath
 	v1 := router.Group(basePath)
 	{
+		// Opening
 		v1.GET("/opening", handler.ShowOpeningHandler)
 		v1.POST("/opening", handler.CreateOpeningHandler)
 		v1.PUT("/opening", handler.UpdateOpeningHandler)
 		v1.DELETE("/opening", handler.DeleteOpeningHandler)
 		v1.GET("/openings", handler.ListOpeningsHandler)
 
+		// Holding
 		v1.GET("/holding", handler.ShowHoldingHandler)
 		v1.POST("/holding", handler.CreateHoldingHandler)
+		v1.PUT("/holding", handler.UpdateHoldingHandler)
+		v1.DELETE("/holding", handler.DeleteHoldingHandler)
+		v1.GET("/holdings", handler.ListHoldingsHandler)
 	}
 
 	// Initialize Swagger
